# RustInDnD

./: .env  Cargo.toml  README.md  appspec.yml
migrations/20161103233231_create_character/: down.sql  up.sql
src/: hbs_helloworld.rs  lib.rs  main.rs  models.rs  schema.rs
src/assets/css/: style.css
src/assets/javascript/: main.js
src/view/templates/: all.hbs  character.hbs  create_character.hbs  edit_character.hbs  index.hbs
src/view/templates/hello/: hello.hbs
view/templates/: index.hbs
